--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch PrePostIncrement",
+            "request": "launch",
+            "mainClass": "hackerrank.PrePostIncrement",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
             "name": "Launch StreamForeach",
             "request": "launch",
             "mainClass": "interviewpack.Java8.StreamForeach",
