--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,111 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch AB",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.AB",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch Anargaram",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.Anargaram",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch TestEpam",
+            "request": "launch",
+            "mainClass": "app.TestEpam",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch FlatMap",
+            "request": "launch",
+            "mainClass": "TechLead.Collections.ArrayList.FlatMap",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "app.App",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch GarbageCollector",
+            "request": "launch",
+            "mainClass": "interview.GarbageCollector",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch Finalizer",
+            "request": "launch",
+            "mainClass": "interview.Finalizer",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch DuplicateChars",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.DuplicateChars",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch PlaindromeJava",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.PlaindromeJava",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch CountNumberOfWordUsingHashMap",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.CountNumberOfWordUsingHashMap",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch SwapTwoNumbers",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.SwapTwoNumbers",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch ReverseString",
+            "request": "launch",
+            "mainClass": "TechLead.ProgrammingQuestions.ReverseString",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch Test",
+            "request": "launch",
+            "mainClass": "app.Test",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch CountOfString",
+            "request": "launch",
+            "mainClass": "app.CountOfString",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
+            "name": "Launch Sumtwo",
+            "request": "launch",
+            "mainClass": "app.Sumtwo",
+            "projectName": "javavs"
+        },
+        {
+            "type": "java",
             "name": "Launch StreamOneTran",
             "request": "launch",
             "mainClass": "TechLead.StreamOneTran",
